<resources>
    <string name="app_name">Catalogo Medicamentos</string>
    <string name="boton_1">Analgesia</string>
    <string name="boton_2">Anestesia</string>
    <string name="boton_3">Cardiología</string>
    <string name="boton_4">Dermatología</string>
    <string name="boton_5">Endocrinología</string>
    <string name="boton_6">Enfermedades infecciosas y parasitarias</string>
    <string name="boton_7">Enfermedades Inmunoalérgicas</string>
    <string name="boton_8">Gastroenterología</string>
    <string name="boton_9">Gineco-Obstetricia</string>
    <string name="boton_10">Hematología</string>
    <string name="boton_11">Intoxicaciones</string>
    <string name="boton_12">Nefrología y Urología</string>
    <string name="boton_13">Neumología</string>
    <string name="boton_14">Neurología</string>
    <string name="boton_15">Nutriología</string>
    <string name="boton_16">Oftalmología</string>
    <string name="boton_17">Oncología</string>
    <string name="boton_18">Otorrinolaringología</string>
    <string name="boton_19">Planificación Familiar</string>
    <string name="boton_20">Psiquiatría</string>
    <string name="boton_21">Reumatología y traumatología</string>
    <string name="boton_22">Soluciones electrolíticas y sustitutos de plasma</string>
    <string name="boton_23">Vacunas, toxoides, inmunoblobulinas, antitoxinas</string>
    <string name="catalogo">Catalogo</string>
    <string name="cuadroBasico">Cuadro Basico</string>
    <string name="cuadroBasico_GrupoUno">Cuadro Basico Grupo Uno</string>
    <string name="catalogo_GrupoUno">Catalogo Grupo Uno</string>
    <string name="analgesia">Analgesia</string>
    <string name="acido_acetilsalcilico_CB">Ácido Acetilsalcílico</string>
    <string name="ibuprofeno_CB">Ibuprofeno</string>
    <string name="metamizol_sodico_com_CB">Metamizol Sódico (Comprimido)</string>
    <string name="metamizol_sodico_sol_CB">Metamizol Sódico (Solución Inyectable)</string>
    <string name="paracetamol_tableta_CB">Paracetamol (Tableta)</string>
    <string name="paracetamol_supositorio_CB">Paracetamol (Supositorio)</string>
    <string name="paracetamol_solucion_CB">Paracetamol (Solución Oral)</string>
    <string name="info_acidoAcetilsalcilico_CB_GrupoUno"><b>Clave:</b>\n0103.00\n\n<b>Descripción:</b>\nTABLETA SOLUBLE O EFERVESCENTE\nCada tableta soluble o efervescente contiene:\nÁcido acetilsalicílico 300 mg\nEnvase con 20 tabletas solubles o esfervescentes.\n\n<b>Indicaciones:</b>\nArtritis reumatoide.\nOsteoartritis.\nFiebre reumática aguda.\nDolor o fiebre.\n\n<b>Vía de administración y Dosis</b>\nOral.\n\nAdultos:\nDolor o fiebre: 250-500 mg cada 4 horas.\n\nArtritis:\n500-1000 mg cada 4 ó 6 horas.\n\nNiños:\nDolor o fiebre:30-60 mg/ Kg de peso corporal/ día fraccionar dosis cada 6 ó 8 horas.\n\nFiebre reumática: 65 mg/Kg de peso corporal/ día fraccionar dosis cada 6 ó 8 horas.\n\n<b>Generalidades:</b>\nInhibe la síntesis de prostaglandinas y actúa sobre el centro termorregulador en el hipotálamo, tiene efecto antiagregante plaquetario por inhibición de la enzima tromboxano sintetasa.\n\n<b>Riesgo en el embarazo: </b>D\n\n<b>Efectos adversos:</b>\nProlongación del tiempo de sangrado, tinnitus, pérdida de la audición, náusea, vómito, hemorragia grastrointestinal, hepatitis tóxica, equimosis, exantea, asma bronqueal, reacciones de hipersensibilidad. Síndrome de Reyé en niños menores de 6 años.\n\n<b>Contraindicaciones y precauciones:</b>\n<b>Contraindicaciones: </b>Hipersensibilidad al fármaco, úlcera péptica o gastritis activas, hipoprotrombinemia, niños menores de 6 años.\n\n<b>Interacciones:</b>\nLa eliminación del ácido acetilsalicílico aumenta con coticoesteroides y  disminuye su efecto con antiácidos. Incremeta el efecto de hipoglucemiantes orales y anticoagulantes orales o heparina.</string>
    <string name="info_ibuprofeno_CB_GrupoUno"><b>Clave:</b>\n5940.02\n\n<b>Descripción:</b>\nTABLETA O CÁPSULA\nCada tableta o cápsula contiene:\nIbuprofeno 200mg\nEnvase con 20 tabletas o cápsulas.\n\n<b>Indicaciones:</b>\nDolor leve a moderado.\nFiebre.\n\n<b>Vía de administración y Dosis:</b>\nOral.\n\nAdultos y niños mayores de 12 años:\n200 a 400 mg/ 4 a 6 h, dependiendo de la instensidad de los síntomas, sin sobrepasar 1200 mg/ día.\n\n<b>Generalidades:</b>\nEs un fármaco inhibidor de prostaglandinas que logran mediante este mecanismo de acción controlar inflamación, dolor y fiebre, la acción antiprostaglandínica es a través de su inhibicion de ciclooxigenasa responsable de la biosíntesis de las prostaglandinas.\n\n<b>Riesgo en el embarazo: </b>X\n\n<b>Efectos adversos:</b>\nEpigastralgias, náuseas, mareos, pirosis, sensación de plenitud en tracto grastrointestinal , trombocitopenia, erupciones cutánea, cefalea, visión borrosa, ambliopía tóxica, retención de líquidos.\n\n<b>Contraindicaciones y precauciones: </b>\n<b>Contraindicaciones: </b>Hipersensibilidad fármaco.\n<b>Precauciones:</b>Antecedentes de: colitis ulcerosa, enfermedad de Crohn; antecendentesd HTA y/o insuficiencia cardiaca; asma bronquial; trastornos hematopoyéticos, lupus eritematoso sistémico o enfermedad mixta de tejido conectivo. Riesgo de hemorragia gastroinstentinal, úlcera o perforación es mayor cuando se utilizan dosis crecientes de AINE, en pacientes con antecendentes de úlcera y mayores de 65 años de edad. Valorar riego/beneficio en: HTA, ICC, enfermedad coronariaestablecida, arteriopatía periférica y/o enfermedad cerebrovascular, porfiria interminente auda. En tratamiento de larga duración con factores de riesgo cardiovascular conocidos (HTA, hiperlipidemia, diabetes mellitus, fumadores). Control a sometidos a cirugía mayor. Control renal, hepático y hematológico. Riesgo de reacciones cutáneas al inicio del tratamiento. Utilizar dosis mínima eficaz durante el tiempo más corto posible para minimizar las reacciones adversas.\n\n<b>Interacciones:</b>\nReduce eficacia de: furosemida, diuréticos tiazídicos. Reduce efecto hipotensor de: ß-bloqueantes, IECA. Reduce efecto de: mifepristona. Aumenta niveles plasmáticos de: digoxina, fenitoína y litio. Aumenta toxicidad de: metotrexato, hidantoínas, sulfamidas. Potencia lesiones gastrointestinales con: salicilatos, fenilbutazona, indometacina y otros AINE. Aumenta efecto de: hipoglucemiantes orales e insulina. Efecto aditivo en la inhibición plaquetaria con: ticlopidina. Aumenta riesgo de hematotoxicidad con: zidovudina. Potencia tiempo de sangrado de: anticoagulantes. Aumenta riesgo de nefrotoxicidad con: tacrolimús, ciclosporina. Riesgo aumentado de hemorragia y úlcera gastrointestinal con: corticosteroides, bifosfonatos o oxipentifilina, inhibidores selectivos de ciclooxigenasa-2. Riesgo de hemorragia con: extractos de hierbas.</string>
    <string name="info_metamizol_com_CB_GrupoUno"><b>Clave:</b>\n0108.00\n\n<b>Descripción:</b>\nCOMPRIMIDO\nCada comprimido contiene: \nMetamizol sódico	500 mg\nEnvase con 10 comprimidos.\n\n<b>Indicaciones:</b>\nFiebre.\nDolor agudo o crónico.\nAlgunos casos de dolor visceral.\n\n<b>Vía de administración y Dosis:</b>\nOral.\n\nAdultos:\nDe 500-1000 mg cada 6 u 8 horas.\n\n<b>Generalidades:</b>\nInhibe la síntesis de prostaglandinas y actúa sobre el centro termorregulador en el hipotálamo.\n\n<b>Riesgo en el embarazo: </b>X\n\n<b>Efectos adversos:</b>\nReacciones de hipersensibilidad: agranulocitosis, leucopenia, trombocitopenia, anemia hemolítica.\n\n<b>Contraindicaciones y precauciones: </b>\n<b>Contraindicaciones: </b>Hipersensibilidad al fármaco y a pirazolonas. Insuficiencia renal o hepática, discrasias sanguíneas, úlcera duodenal.\n<b>Precauciones: </b>No administrar por periodos largos. Valoración hematológica durante el tratamiento. No se recomienda en niños.\n\n<b>Interacciones:</b>\nCon neurolépticos puede ocasionar hipotermia grave.</string>
    <string name="bupivacaina_sol1_catalogo_grupoDos">Bupivacaína (Solución Inyectable (1))</string>
    <string name="bupivacaina_sol2_catalogo_grupoDos">Bupivacaína (Solución Inyectable (2))</string>
    <string name="besilatoDeCisatracurio_catalogo_grupoDos">Besilato de Cisatracurio</string>
    <string name="desflurano_grupoDos">Desflurano</string>
    <string name="diazepam_sol1_catalogo_grupoDos">Diazepam (Solucion Inyectable (1))</string>
    <string name="diazepam_sol2_catalogo_grupoDos">Diazepam (Solucion Inyectable (2))</string>
    <string name="efedrina_catalogo_grupoDos">Efedrina</string>
    <string name="etomidato_catalogo_grupoDos">Etomidato</string>
    <string name="fentanilo_catalogo_grupoDos">Fentanilo</string>
    <string name="flumazenil_catalogo_grupoDos">Flumazenil</string>
    <string name="isoflurano_catalogo_grupoDos">Isoflurano</string>
    <string name="ketamina_catalogo_grupoDos">Ketamina</string>
    <string name="midazolam_sol1_catalogo_grupoDos">Midazolam (Solucion Inyectable (1))</string>
    <string name="midazolam_sol2_catalogo_grupoDos">Midazolam (Solucion Inyectable (2))</string>
    <string name="naloxona_catalogo_grupoDos">Naloxona</string>
    <string name="neostigmina_catalogo_grupoDos">Neostigmina</string>
    <string name="propofol_emu1_catalogoDos">Propofol (Emulsión Inyectable (1))</string>
    <string name="propofol_emu2_catalogoDos">Propofol (Emulsión Inyectable (2))</string>
    <string name="bromuroDeRocuronio_catalogo_grupoDos">Bromuro de Rocuronio</string>
    <string name="ropivacania_catalogo_grupoDos">Ropivacaina</string>
    <string name="sevoflurano_catalogo_grupoDos">Sevoflurano</string>
    <string name="cloruroDeSuxametonio_catalogo_">Cloruro De Suxametonio</string>
    <string name="tiopentalSodico_catalogo_grupoDos">Tiopental Sódico</string>
    <string name="vecuronio_catalogo_grupoDos">Vecuronio</string>
    <string name="amlodipino_tab1_CB_grupoTres">Amlodipino (Tableta (1))</string>
    <string name="amlodipino_tab2_CB_grupoTres">Amlodipino (Tableta (2))</string>
    <string name="captopril_CB_grupoTres">Captopril</string>
    <string name="Clortalidona_CB_grupoTres">Clortalidona</string>
    <string name="Digoxina_tab_CB_grupoTres">Digoxina (Tableta)</string>
    <string name="Digoxina_eli_CB_grupoTres">Digoxina (Elíxir)</string>
    <string name="Digoxina_sol_CB_grupoTres">Digoxina (Solución Inyectable)</string>
    <string name="Enalapril_o_lisinopril_o_ramipril_CB_grupoTres">Enalapril o lisinopril o ramipril</string>
    <string name="Epinefrina_CB_grupoTres">Epinefrina</string>
    <string name="Hidralazina_tab_CB_grupoTres">Hidralazina (Tableta)</string>
    <string name="Hidralazina_sol_CB_grupoTres">Hidralazina (Solución Inyectable)</string>
    <string name="Isosorbida_tab1_CB_grupoTres">Isosorbida (Tableta sublingual)</string>
    <string name="Isosorbida_tab2_CB_grupoTres">Isosorbida (Tableta)</string>
    <string name="Metoprolol_CB_grupoTres">Metoprolol</string>
    <string name="Nifedipino_cap_CB_grupoTres">Nifedipino (Cápsula de gelatina blanda)</string>
    <string name="Nifedipino_com_CB_grupoTres">Nifedipino (Comprimido de liberación prolongada)</string>
    <string name="Pentoxifilina_CB_grupoTres">Pentoxifilina</string>
    <string name="Propranolol_tab1_CB_grupoTres">Propranolol (Tableta (1))</string>
    <string name="Propranolol_tab2_CB_grupoTres">Propranolol (Tableta (2))</string>
</resources>