<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="grupoTres.cuadroBasicoGrupoTres.principalCuadroBasicoGrupoTres.cuadroBasicoGrupoTres">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn1_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/amlodipino_tab1_CB_grupoTres" />

            <Button
                android:id="@+id/btn2_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/amlodipino_tab2_CB_grupoTres" />

            <Button
                android:id="@+id/btn3_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/captopril_CB_grupoTres" />

            <Button
                android:id="@+id/btn4_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/Clortalidona_CB_grupoTres" />

            <Button
                android:id="@+id/btn5_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/Digoxina_tab_CB_grupoTres" />

            <Button
                android:id="@+id/btn6_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/Digoxina_eli_CB_grupoTres" />

            <Button
                android:id="@+id/btn7_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/Digoxina_sol_CB_grupoTres" />

            <Button
                android:id="@+id/btn8_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/Enalapril_o_lisinopril_o_ramipril_CB_grupoTres" />

            <Button
                android:id="@+id/btn9_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/Epinefrina_CB_grupoTres" />

            <Button
                android:id="@+id/btn10_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/Hidralazina_tab_CB_grupoTres" />

            <Button
                android:id="@+id/btn11_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/Hidralazina_sol_CB_grupoTres" />

            <Button
                android:id="@+id/btn12_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/Isosorbida_tab1_CB_grupoTres" />

            <Button
                android:id="@+id/btn13_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/Isosorbida_tab2_CB_grupoTres" />

            <Button
                android:id="@+id/btn14_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/Metoprolol_CB_grupoTres" />

            <Button
                android:id="@+id/btn15_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/Nifedipino_cap_CB_grupoTres" />

            <Button
                android:id="@+id/btn16_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/Nifedipino_com_CB_grupoTres" />

            <Button
                android:id="@+id/btn17_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/Pentoxifilina_CB_grupoTres" />

            <Button
                android:id="@+id/btn18_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/Propranolol_tab1_CB_grupoTres" />

            <Button
                android:id="@+id/btn19_grupoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SeleccionCuadroBasicoGrupoTres"
                android:text="@string/Propranolol_tab2_CB_grupoTres" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
